<package>
  <name>neo_platformctrl_diff</name>
  <version>1.2.4</version>
  <description>
    neo_platformctrl_diff
  </description>
  <maintainer email="test@test.com">Neobotix GmbH</maintainer>
  <license>BSD</license>

  <url>http://</url>
  <author>Jan-Niklas Nieland</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rostest</run_depend>
</package>
